# router-plugins

./: .env.dev  .env.example  .env.prod  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prebuilt  Dockerfile.production  Dockerfile.production.heavy  README.md  router-prebuilt.yaml  router.yaml  rover-config.yaml  start-all.sh  start.sh  supergraph-schema.graphql
src/helper/: main.rs
src/plugins/: hello_world.rs  mod.rs  mongodb.rs  subgraph_tier.rs
src/router/: main.rs
src/router/plugins/: mod.rs  mongodb.rs  subgraph_tier.rs
src/server/: server.py
xtask/: Cargo.toml
