# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "starstruck"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = "1.48.0"
async-trait = "0.1.52"
futures = "0.3.21"
schemars = "0.8.10"
serde = "1.0.149"
serde_json = "1.0.79"
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.37"
http = "0.2.12"
cached  = { version = "0.51.3" }
tokio = { version = "1", features = ["full"] }

[alias]
xtask = "run --package xtask --"
router = "run --package xtask -- router"


# this makes build scripts and proc macros faster to compile
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"]
