[package]
name = "xtask"
edition = "2021"
publish = false
version = "0.1.0"

[dependencies]
# This dependency should stay in line with your router version

apollo-router-scaffold = { git = "https://github.com/sushant3524/router.git", branch = "router-ignore-validation" }

anyhow = "1.0.58"
clap = "4.0.32"
